--- a/style.css
+++ b/style.css
@@ -274,6 +274,7 @@ section{
     margin-top: 10vh;
     justify-content: center;
     flex-direction: column;
+    flex-flow: wrap;
 }
 
 .skills-container{
@@ -329,28 +330,58 @@ article .icon{
 #projects{
     position:relative;
     margin-top: 5vh;
+    height: 96vh;
 }
 
 .color-container {
     border-color: rgb(163,163,163);
     background: rgb(250,250,250);
+    flex: 1 0 auto;
 }
+
+.project-article-container{
+    display: flex;
+    text-align: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 2.5rem;
+    justify-content: space-around;
+    max-height: 30vh;
+    max-width: 40vw;
+}
+
 
 .project-img {
     border-radius: 2rem;
-    width: 100%;
-    height: 100%;
+    width: 20vw;
+    height: 35vh;
+    margin: auto;
+}
+
+.ugps-img{
+    border-radius: 2rem;
+    width: 32vw;
+    height: 40vh;
     margin: auto;
 }
 
 .project-title{
     margin: 1rem;
     color: black;
+    font-size: 2vw;
 }
 
 .project-btn{
     color: black;
     border-color: rgb(163,163,163);
+}
+
+.project-container{
+    gap:2rem;
+    margin-bottom:2rem;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 /* CONTATCT */
@@ -359,6 +390,7 @@ article .icon{
     justify-content: center;
     flex-direction: column;
     height: 70vh;
+    padding-top: 20vh;
 }
 
 .contact-info-upper-container{
@@ -413,9 +445,18 @@ article .icon{
 .btn-container{
     display: flex;
     padding: 10px;
-    /* padding-top: 36vh; */
     justify-content: center;
     gap: 1rem;
+}
+
+.proj-btn-container{
+    display: flex;
+    padding: 10px;
+    /* padding-top: 36vh; */
+    justify-content: center;
+    flex-direction: column;
+    gap: 1rem;
+
 }
 
 .btn{
